--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+**/__pycache__/
+lisrd/third_party/super_point_magic_leap/__pycache__/
+pyrightconfig.json
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
