--- a/lisrd/configs/test.yaml
+++ b/lisrd/configs/test.yaml
@@ -1,14 +1,13 @@
 data:
-    name: 'mixed_dataset'
+    name: 'coco'
     datasets: ['coco',]
-    data_paths: ['/home/chiebotgpuhq/MyCode/dataset/coco/',
-                 ]
+    data_path: '/home/chiebotgpuhq/MyCode/dataset/coco/'
     weights: [0.5, 0.25, 0.25]
     photo_aug: [true, true, true]
-    batch_size: 8
-    test_batch_size: 8
+    batch_size: 1
+    test_batch_size: 1
     sizes:
-        train: 30000
+        train: 5000
         val: 500
         test: 1000
     seed: 0
@@ -54,5 +53,5 @@ model:
     lambda: 1
     dist_threshold: 8
 n_iter: 1000000
-validation_interval: 3000
+validation_interval: 300
 save_interval: 3000
